Fix pandoc grammar rendering (#59)
The grammar rendering by pandoc was broken in the change to add Annex A
because pandoc doesn't read macros out of nested environments correctly.
This fixes the issue by declaring the macros golbally. It's a bit sad,
but fine.

--- a/spec/assets/style.css
+++ b/spec/assets/style.css
@@ -134,7 +134,7 @@ h1:hover a, h2:hover a, h3:hover a, h4:hover a, h5:hover a, h6:hover a { color: 
 .toc-toggle[aria-expanded="true"] { transform: rotate(90deg); }
 
 /* Grammar style */
-.grammarlist {
+.grammar {
   border: 1px solid #000;
   background: #ffffff;
 	font-family: 'Noto Sans';
@@ -149,4 +149,4 @@ h1:hover a, h2:hover a, h3:hover a, h4:hover a, h5:hover a, h6:hover a { color: 
   list-style-type: none;
 }
 
-div.grammarlist span.texttt { font-family: 'Noto Sans Mono'; font-style: normal; }
+div.grammar span.texttt { font-family: 'Noto Sans Mono'; font-style: normal; }
